syntax = "proto3";
package pb;
option go_package = "pb";

//import "google/api/annotations.proto";
//import "protoc-gen-swagger/options/annotations.proto";
import "error.proto";

message Enterprise {
    string enterprise_id = 1;
    string enterprise_name = 2;
    string home_page = 3;
    string address = 4;
    string phone = 5;
    string email = 6;
    string contacts = 7;
    string desc = 8;
}

message EnterpriseID {
    string enterprise_id = 1;
}

message EnterpriseResponse {
    string enterprise_id = 1;
    Enterprise enterprise = 2;
    Error error = 3; //optional
}

service EnterpriseHandler {
    // enterprise
    rpc CreateEnterprise (Enterprise) returns (EnterpriseResponse) {
    }

    rpc DeleteEnterprise (EnterpriseID) returns (EnterpriseResponse) {
    }

    rpc UpdateEnterprise (Enterprise) returns (EnterpriseResponse) {
    }

    rpc GetEnterprise (EnterpriseID) returns (EnterpriseResponse) {
    }
}
